# Rust-API

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  new_script.ts
migrations/2022-10-21-054209_agents/: down.sql  up.sql
migrations/2022-10-21-054457_errands/: down.sql  up.sql
migrations/2022-10-22-045019_c2_tasks/: up.sql
src/: api_models.rs  db.rs  main.rs  models.rs  schema.rs  structs.rs
static/: index.html  script.js
